tests/invalid/depth18.h
#include "depth19.h"
